# shop-mts-by

./: .gitignore  Dockerfile  Jenkinsfile  pyproject.toml  pytest.ini
framework/: utils.py
framework/common/: env_vars.py
framework/features/shop_mts/: shop_mts_app.py
framework/features/shop_mts/data/: data_iphone.py
framework/features/shop_mts/locators/: main_page_locators.py  product_page_locator.py
framework/features/shop_mts/pages/: main_page.py
framework/features/shop_mts/property_locators/: all_page_property.py
jenkinsfiles/: Jenkinsfile
tests/: conftest.py
tests/positive_tests/search_module_tests/: test_search_module_operations.py
